coin price added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
                         </div>
                     </div>
                 </div>
+				<div class="col-6">
+					<h4>Pasa tus valores a USD</h4>
+					<div class="card">
+						<div class="form-group">
+							<label for="coinQuantity">Quantity</label>
+							<input type="text" class="form-control coinPrice" name="coinQuantity" id="coinQuantity" placeholder="">
+						</div>
+						<div class="form-group">
+							<label for="coinPrice">Price</label>
+							<input type="text" class="form-control coinPrice" name="coinPrice" id="coinPrice" placeholder="">
+						</div>
+						<div id="coinTotal">Eso vale $<span></span> USD maestro</div>
+					</div>
+				</div>
             </div>
         </div>
     </body>
@@ -49,6 +63,11 @@
         var sellPrice = 0;
         var result = 0;
         var resultpercent = 0;
+		
+		var coinQuantity = 0;
+		var coinPrice = 0;
+		var coinTota = 0;
+		
         $('#buyAmount').change(function(value){
             var newValue = value.currentTarget.value;
             if(isNaN(newValue)){
@@ -96,6 +115,29 @@
                 sellPrice = newValue;
             }
         });
+		
+		$('#coinQuantity').change(function(){
+			var newValue = value.currentTarget.value;
+            if(isNaN(newValue)){
+                value.currentTarget.value = "";
+                coinQuantity = 0;
+                alert('poné un número imbecil!');
+            }
+            else{
+                coinQuantity = newValue;
+            }
+		});
+		
+		}
+		$('.coinPrice').change(function(){
+			var newValue = value.currentTarget.value;
+            if(!isNaN(newValue)){
+				coinTotal = coinQuantity * coinPrice;
+				$('#coinTotal span').html(parseFloat(coinTotal).toFixed(2))
+            }else{
+				coinTotal = 0;
+			}
+		});
 
         $('#calculate').click(function(){
             result = (sellPrice * sellAmount) - (buyPrice * buyAmount);
